fix overflow-x

--- a/source/scss/blocks/_calculate-mobile.scss
+++ b/source/scss/blocks/_calculate-mobile.scss
@@ -137,6 +137,7 @@
   }
 
   .calculate__steps-inner {
+    margin-top: 0;
     padding: 30px 20px;
     order: 1;
   }
