--- a/source/scss/blocks/_calculate.scss
+++ b/source/scss/blocks/_calculate.scss
@@ -594,6 +594,7 @@
 
 
   &__steps-inner {
+    margin-top: 20px;
     max-height: 550px;
     flex-grow: 2;
     overflow-y: auto;
