--- a/source/scss/general/_global.scss
+++ b/source/scss/general/_global.scss
@@ -9,6 +9,7 @@ body {
 html {
   box-sizing: border-box;
   width: 100%;
+  overflow-x: hidden;
 }
 
 *,
